2001-03-23  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Class/ClassTest.java (test_forName): Added
	test for `[int'.

2001-02-19  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/ThreadGroup/enumerate.java: New file.

2001-02-13  Warren Levy  <warrenl@redhat.com>

	* README: Included paragraph on ignoring expected failures with xfails.

2001-02-08  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/InputStreamReader/except.java: New file.

2001-02-08  Warren Levy  <warrenl@redhat.com>

	* gnu/testlet/SimpleTestHarness.java (SimpleTestHarness): Moved
	code for reading xfails file from main.

2001-02-08  Warren Levy  <warrenl@redhat.com>

	* gnu/testlet/SimpleTestHarness.java: Minor formatting fixes.
	(check): Compare failures against expected failures.
	(done): Print out totals for unexpected failures and passes.
	(main): Load expected failures file into Vector.

2001-02-07  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/MessageFormat/format.java (test): Added
	test for JDK compatibility.

	* gnu/testlet/java/util/Arrays/sort.java: New file.

2001-01-16  Warren Levy  <warrenl@redhat.com>

	* gnu/testlet/java/math/BigInteger/shift.java: Added more test cases.

2001-01-16  Warren Levy  <warrenl@redhat.com>

	* gnu/testlet/java/math/BigInteger/shift.java: New file.

2001-01-10  Warren Levy  <warrenl@redhat.com>

	* gnu/testlet/java/math/BigDecimal/setScale.java: New file.

2000-12-20  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Class/ClassTest.java (test_getInterfaces):
	Arrays implement two interfaces.
	(testall): Don't run test_getResource.

	* gnu/testlet/java/lang/StringBuffer/plus.java (test): Fixed
	null-as-left-operand test to match JDK 1.2.

2000-12-08  Warren Levy  <warrenl@redhat.com>

	* gnu/testlet/java/net/Socket/SocketBServer.java (harness): Made
	package private.
	* gnu/testlet/java/net/Socket/SocketServer.java: Restored calls
	to harness.fail.
	(harness): Made package private.